fix: fix spacing being too large between the XP bar and the portrait on compact, reversed version of the hero card

--- a/src/components/Heroes/components/HeroCard/style.module.css
+++ b/src/components/Heroes/components/HeroCard/style.module.css
@@ -51,6 +51,10 @@
   grid-template-areas: "inventory . portrait";
 }
 
+.reverse.compact .topRow {
+  grid-template-areas: ". portrait";
+}
+
 .level {
   position: relative;
   display: grid;
